--- a/main.html
+++ b/main.html
@@ -9,15 +9,21 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	
-	<h1 style="color: #3b99e0">Shoping cart</h1>
+	<div>
+	<h1 class="d-flex justify-content-center" style="color: #3b99e0">Shoping cart</h1>
 	<br>
-	<div class="d-flex align-items-center">
-    
+	<div class="d-flex justify-content-center align-items-center">
 	<p>The customer is very important, the customer will be followed by the customer. Now, as an urn, I have no right to be in possession of property.</p>
 	</div>
-	
-	
+	</div>
+	<div class="summary">
+		<div style="border-top-color: #5ea4f3; background-color: #f7fbff;">
+			<h2>Summary</h2>
+			<div class="container">
+				<div class="row">
+					
+		</div>
+	</div>
 	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
     <script type="text/javascript" src="./script.js">
