--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<div>
+	<div class="block-heading">
 	<h1 class="d-flex justify-content-center" style="color: #3b99e0">Shoping cart</h1>
 	<br>
 	<div class="d-flex justify-content-center align-items-center">
