--- a/main.html
+++ b/main.html
@@ -12,12 +12,12 @@
 	<div class=" bg-light">
 	<div class="block-heading">
 	<h1 class="d-flex justify-content-center" style="color: #3b99e0">Shoping cart</h1>
-	<div class="d-flex justify-content-md-center">
+	<div class="row justify-content-md-center">
 	<p>The customer is very important, the customer will be followed by the customer. Now, as an urn, I have no right to be in possession of property.</p>
 	</div>
 	</div>
 	<div class="d-flex justify-content-space-between">
-	<div class="product col-8">
+	<div class="product col-lg-8">
 		<div class="row">
 			<div class="col">
 				<div class="img-fluid">
@@ -60,7 +60,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="summary col-4">
+	<div class="summary col-lg-4">
 		<div style="border-top: #5ea4f3; background-color: #f7fbff;">
 			<h2 class="d-flex justify-content-center">Summary</h2>
 			<div class="container">
