--- a/main.html
+++ b/main.html
@@ -9,13 +9,14 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<div class=" bg-light">
+
 	<div class="block-heading">
 	<h1 class="d-flex justify-content-center" style="color: #3b99e0">Shoping cart</h1>
 	<div style="width:400px; height:100px; margin-left:120px" class="d-flex justify-content-center">
 	<p>The customer is very important, the customer will be followed by the customer. Now, as an urn, I have no right to be in possession of property.</p>
 	</div>
 	</div>
+	
 	<div class="d-flex justify-content-space-between">
 	     <div class="product col-lg-8">
 			 <div class="row">
@@ -24,7 +25,7 @@
 			         <div class="img-fluid">
 				         <img src="https://store.storeimages.cdn-apple.com/4668/as-images.apple.com/is/iphone-card-40-iphone15prohero-202309_FMT_WHH?wid=508&hei=472&fmt=p-jpg&qlt=95&.v=1693086369818" style="width:100px; height:100px;">
 			         </div>
-					 <div class="col">
+					 <div class="col" style="width:150px; margin-left:10px;">
 						 <a href="#">I am sorry</a>
 						 <br>
 						 <p>Display:5 inches
@@ -32,16 +33,66 @@
 						 Memory:32gb</p>
 					 </div>
 					<div>
-						<p>Quantity:</p>
-						<button class="btn bg-light">0</button>
+						<p style="margin-left:15px;">Quantity:</p>
+						<button type="button" style="width:70px; margin-left:10px; margin-right:30px;" class="btn btn-outline-secondary">0</button>
+					</div>
+					<div>
+						<h5 style="margin-left:15px; margin-right:30px;">$120</h5>
+					</div>
+					 </div>
+					 <div class="d-flex justify-content-space-between">
+			         <div class="img-fluid">
+				         <img src="https://store.storeimages.cdn-apple.com/4668/as-images.apple.com/is/iphone-card-40-iphone15prohero-202309_FMT_WHH?wid=508&hei=472&fmt=p-jpg&qlt=95&.v=1693086369818" style="width:100px; height:100px;">
+			         </div>
+					 <div class="col" style="width:150px; margin-left:10px;">
+						 <a href="#">I am sorry</a>
+						 <br>
+						 <p>Display:5 inches
+						 RAM:4GB
+						 Memory:32gb</p>
+					 </div>
+					<div>
+						<p style="margin-left:15px;">Quantity:</p>
+						<button type="button" style="width:70px; margin-left:10px; margin-right:30px;" class="btn btn-outline-secondary">0</button>
+					</div>
+					<div>
+						<h5 style="margin-left:15px; margin-right:30px;">$120</h5>
+					</div>
+					 </div>
+					 <div class="d-flex justify-content-space-between">
+			         <div class="img-fluid">
+				         <img src="https://store.storeimages.cdn-apple.com/4668/as-images.apple.com/is/iphone-card-40-iphone15prohero-202309_FMT_WHH?wid=508&hei=472&fmt=p-jpg&qlt=95&.v=1693086369818" style="width:100px; height:100px;">
+			         </div>
+					 <div class="col" style="width:150px; margin-left:10px;">
+						 <a href="#">I am sorry</a>
+						 <br>
+						 <p>Display:5 inches
+						 RAM:4GB
+						 Memory:32gb</p>
+					 </div>
+					<div>
+						<p style="margin-left:15px;">Quantity:</p>
+						<button type="button" style="width:70px; margin-left:10px; margin-right:30px;" class="btn btn-outline-secondary">0</button>
+					</div>
+					<div>
+						<h5 style="margin-left:15px; margin-right:30px;">$120</h5>
 					</div>
 					 </div>
 				 </div>
 			 </div> 
 	     </div>
 		 <div class="summary col-lg-4">
+			 <div style="border-top: #5ea4f3; background-color: #f7fbff;">
+				 <h2>Summary</h2>
+				 <div class="row">
+					 <div class="d-flex justify-content-space-between">
+					 <div class="col">subtoatal</div>
+					 <div class="col">$360</div>
+				 </div>
+			 </div>
 			,jyfhtdhgc
 	     </div>
+		</div>
 	</div>
 	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
