--- a/main.html
+++ b/main.html
@@ -26,7 +26,7 @@
 				         <img src="https://store.storeimages.cdn-apple.com/4668/as-images.apple.com/is/iphone-card-40-iphone15prohero-202309_FMT_WHH?wid=508&hei=472&fmt=p-jpg&qlt=95&.v=1693086369818" style="width:100px; height:100px;">
 			         </div>
 					 <div class="col" style="width:150px; margin-left:10px;">
-						 <a href="#">I am sorry</a>
+						 <a href="#" class="d-flex text-decoration:none;">I am sorry</a>
 						 <br>
 						 <p>Display:5 inches
 						 RAM:4GB
@@ -82,15 +82,40 @@
 			 </div> 
 	     </div>
 		 <div class="summary col-lg-4">
-			 <div style="border-top: #5ea4f3; background-color: #f7fbff;">
-				 <h2>Summary</h2>
+			 <div style="border-top: #5ea4f3; background-color: #f7fbff">
+				 <h2 class="d-flex justify-content-center">Summary</h2>
+				 <br>
+				 <div class="container">
 				 <div class="row">
-					 <div class="d-flex justify-content-space-between">
-					 <div class="col">subtoatal</div>
-					 <div class="col">$360</div>
+					 <div class="d-flex justify-content-space-between" style="width:200px;">
+					 <div class="col-sm-8">subtoatal</div>
+					 <div class="col-sm-4">$360</div>
+					 <hr>
+				     </div>
 				 </div>
+					 <div class="row">
+					 <div class="d-flex justify-content-space-between" style="width:200px;">
+					 <div class="col-sm-8">Discount</div>
+					 <div class="col-sm-4">$0</div>
+					 <hr>
+				     </div>
+				 </div>
+					 <div class="row">
+					 <div class="d-flex justify-content-space-between" style="width:200px;">
+					 <div class="col-sm-8">Shipping</div>
+					 <div class="col-sm-4">$0</div>
+					 <hr>
+				     </div>
+				 </div>
+					 <div class="row">
+					 <div class="d-flex justify-content-space-between" style="width:200px;">
+					 <div class="col-sm-8">Toatal</div>
+					 <div class="col-sm-4">$360</div>
+					 <hr>
+				     </div>
+				 </div>
+				<button type="button" class="d-flex justify-content-center btn btn-primary">checkbox</button>
 			 </div>
-			,jyfhtdhgc
 	     </div>
 		</div>
 	</div>
