--- a/main.html
+++ b/main.html
@@ -18,9 +18,10 @@
 	</div>
 	
 	<div class="d-flex justify-content-space-between">
-	     <div class="product col-lg-8">
+	     <div class="col-lg-8">
 			 <div class="row">
 				 <div class="col">
+					 <div class="product">
 					 <div class="d-flex justify-content-space-between">
 			         <div class="img-fluid">
 				         <img src="https://store.storeimages.cdn-apple.com/4668/as-images.apple.com/is/iphone-card-40-iphone15prohero-202309_FMT_WHH?wid=508&hei=472&fmt=p-jpg&qlt=95&.v=1693086369818" style="width:100px; height:100px;">
@@ -40,6 +41,8 @@
 						<h5 style="margin-left:15px; margin-right:30px;">$120</h5>
 					</div>
 					 </div>
+					 </div>
+					  <div class="product">
 					 <div class="d-flex justify-content-space-between">
 			         <div class="img-fluid">
 				         <img src="https://store.storeimages.cdn-apple.com/4668/as-images.apple.com/is/iphone-card-40-iphone15prohero-202309_FMT_WHH?wid=508&hei=472&fmt=p-jpg&qlt=95&.v=1693086369818" style="width:100px; height:100px;">
@@ -59,6 +62,8 @@
 						<h5 style="margin-left:15px; margin-right:30px;">$120</h5>
 					</div>
 					 </div>
+					  </div>
+					<div class="product">
 					 <div class="d-flex justify-content-space-between">
 			         <div class="img-fluid">
 				         <img src="https://store.storeimages.cdn-apple.com/4668/as-images.apple.com/is/iphone-card-40-iphone15prohero-202309_FMT_WHH?wid=508&hei=472&fmt=p-jpg&qlt=95&.v=1693086369818" style="width:100px; height:100px;">
