--- a/main.html
+++ b/main.html
@@ -22,6 +22,7 @@
 			 <div class="row">
 				 <div class="col">
 					 <div class="product">
+						 <div class="row">
 					 <div class="d-flex justify-content-space-between">
 			         <div class="img-fluid">
 				         <img src="https://store.storeimages.cdn-apple.com/4668/as-images.apple.com/is/iphone-card-40-iphone15prohero-202309_FMT_WHH?wid=508&hei=472&fmt=p-jpg&qlt=95&.v=1693086369818" style="width:100px; height:100px;">
@@ -42,7 +43,9 @@
 					</div>
 					 </div>
 					 </div>
+					 </div>
 					  <div class="product">
+						  <div class="row">
 					 <div class="d-flex justify-content-space-between">
 			         <div class="img-fluid">
 				         <img src="https://store.storeimages.cdn-apple.com/4668/as-images.apple.com/is/iphone-card-40-iphone15prohero-202309_FMT_WHH?wid=508&hei=472&fmt=p-jpg&qlt=95&.v=1693086369818" style="width:100px; height:100px;">
@@ -63,7 +66,9 @@
 					</div>
 					 </div>
 					  </div>
+					</div>
 					<div class="product">
+						<div class="row">
 					 <div class="d-flex justify-content-space-between">
 			         <div class="img-fluid">
 				         <img src="https://store.storeimages.cdn-apple.com/4668/as-images.apple.com/is/iphone-card-40-iphone15prohero-202309_FMT_WHH?wid=508&hei=472&fmt=p-jpg&qlt=95&.v=1693086369818" style="width:100px; height:100px;">
@@ -84,8 +89,10 @@
 					</div>
 					 </div>
 				 </div>
-			 </div> 
+			 </div>
+		 </div>
 	     </div>
+		 </div>
 		 <div class="summary col-lg-4">
 			 <div style="border-top: #5ea4f3; background-color: #f7fbff">
 				 <h2 class="d-flex justify-content-center">Summary</h2>
